@@ -16,6 +16,7 @@ import org.junit.jupiter.api.Test;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 class BatchTest
 {
@@ -61,7 +62,7 @@ class BatchTest
         val output = new ArrayList<String>();
         val batchSize = 3;
 
-        val batchProcessor = new SyncBatchProcessor<String>(dummyVlModule, Collections.singleton(stringBroadcaster))
+        val batchProcessor = new SyncBatchProcessor<>(dummyVlModule, Set.of(stringBroadcaster))
         {
             @Override
             public void processBatch(User user, List<String> batch)
@@ -87,7 +88,7 @@ class BatchTest
         val output = Collections.synchronizedList(new ArrayList<String>());
         val batchSize = 3;
 
-        val batchProcessor = new AsyncBatchProcessor<String>(dummyVlModule, Collections.singleton(stringBroadcaster))
+        val batchProcessor = new AsyncBatchProcessor<>(dummyVlModule, Set.of(stringBroadcaster))
         {
             @Override
             public void processBatch(User user, List<String> batch)
